<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#556655">
    <LinearLayout
  		android:orientation="horizontal"
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:padding="3dp">
   		<ToggleButton
   			android:textOn="Stop"
   			android:textOff="Start"
        	android:id="@+id/ToggleButton"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content">
        </ToggleButton>
		<TextView
        	android:text="@string/eltime"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textSize = "16sp"
    		android:textColor ="@color/white"
    	/>
    	<Chronometer
    		android:id="@+id/chronometer"
    		android:format="@string/chronometer_format"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	/>
		<TextView
        	android:text="@string/distance"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textSize = "16sp"
    		android:textColor ="@color/white"
    		android:layout_marginLeft="5dp"
    	/>
		<TextView
        	android:id="@+id/disText"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:textSize = "16sp"
    		android:textColor ="@color/white"
    	/>
	</LinearLayout>
	<LinearLayout
  		android:orientation="horizontal"
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:padding="3dp">
		<TextView
   			android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
			android:text="@string/position"
    		android:textSize = "16sp"
    		android:textColor ="@color/white"
    	/>
		<TextView
        	android:id="@+id/address"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:textSize = "16sp"
    		android:textColor ="@color/white"
    	/>
	</LinearLayout>
    <com.google.android.maps.MapView
        android:id="@+id/mapview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:enabled="true"
        android:clickable="true"
        android:apiKey="@string/map_key"
    />
</LinearLayout>
